--- a/index.html
+++ b/index.html
@@ -17,15 +17,14 @@
 			<section id="header">
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
-					<h1 id="logo"><a href="#">Willis Corto</a></h1>
-					<p>I got reprogrammed by a rogue AI<br />
-					and now I'm totally cray</p>
+					<h1 id="logo"><a href="https://media.licdn.com/dms/image/C4E03AQGw2LedVgDFmA/profile-displayphoto-shrink_200_200/0?e=1576108800&v=beta&t=K4Fr4FA51rdqxDxyaDAemfSrus8AMJUSk3fDeCSWt9Q">Daniel Gleason</a></h1>
+					<p>Aspiring Full-Stack Developer</p>
 				</header>
 				<nav id="nav">
 					<ul>
 						<li><a href="#one" class="active">About</a></li>
 						<li><a href="#two">Things I Can Do</a></li>
-						<li><a href="#three">A Few Accomplishments</a></li>
+						<li><a href="#three">My Projects</a></li>
 						<li><a href="#four">Contact</a></li>
 					</ul>
 				</nav>
@@ -67,7 +66,7 @@
 									<h3>Things I Can Do</h3>
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
 									<ul class="feature-icons">
-										<li class="icon solid fa-code">Write all the code</li>
+										<li <img src="/open-iconic/svg/contrast.svg" >Write all the code</li>
 										<li class="icon solid fa-cubes">Stack small boxes</li>
 										<li class="icon solid fa-book">Read books and stuff</li>
 										<li class="icon solid fa-coffee">Drink much coffee</li>
