--- a/index.html
+++ b/index.html
@@ -52,26 +52,24 @@
 								</div>
 								<div class="container">
 									<header class="major">
-										<h2>Read Only</h2>
-										<p>Just an incredibly simple responsive site<br />
-										template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
+										<h2>Portfolio</h2>
+										<p>My name is Danny Gleason<br />
+										feel free to check out my resume at <a href="https://docs.google.com/document/d/10OUAYXiYmBUSLBduZBJ8F-LuV3yJ8PYZ/edit">Resume</a>.</p>
 									</header>
-									<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
+									<p>I've worked as a teaher, an entrepreneurer, and a salesperson for small tech companies. I'd like to bring my people skills to the tech industry. I will soon will have completed General Assembly's Software Egineering Intensive 3 month course, and updating my portfolio as I go along. Please take a look at the projects I've built / been apart of, if interested. </p>
 								</div>
 							</section>
 
 						<!-- Two -->
 							<section id="two">
 								<div class="container">
-									<h3>Things I Can Do</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
+									<h3>Technologies I know</h3>
+									<p>I feel confident working in the following technologies</p>
 									<ul class="feature-icons">
-										<li <img src="/open-iconic/svg/contrast.svg" >Write all the code</li>
-										<li class="icon solid fa-cubes">Stack small boxes</li>
-										<li class="icon solid fa-book">Read books and stuff</li>
-										<li class="icon solid fa-coffee">Drink much coffee</li>
-										<li class="icon solid fa-bolt">Lightning bolt</li>
-										<li class="icon solid fa-users">Shadow clone technique</li>
+										<li class="fab fa-html5" >HTML5</li>
+										<li class="fab fa-bootstrap">Bootstrap</li>
+										<li class="fab fa-js-square">Javascript</li>
+										<li class="fab fa-css3-alt">CSS3</li>
 									</ul>
 								</div>
 							</section>
