--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<script src="https://kit.fontawesome.com/81e6b06515.js" crossorigin="anonymous"></script>
 	</head>
 	<body class="is-preload">
 
@@ -56,7 +57,7 @@
 										<p>My name is Danny Gleason<br />
 										feel free to check out my resume at <a href="https://docs.google.com/document/d/10OUAYXiYmBUSLBduZBJ8F-LuV3yJ8PYZ/edit">Resume</a>.</p>
 									</header>
-									<p>I've worked as a teaher, an entrepreneurer, and a salesperson for small tech companies. I'd like to bring my people skills to the tech industry. I will soon will have completed General Assembly's Software Egineering Intensive 3 month course, and updating my portfolio as I go along. Please take a look at the projects I've built / been apart of, if interested. </p>
+									<p>I've worked as a teacher, an entrepreneurer, and a tech salesperson. I'd like to bring my people skills and my passion for the tech industry to the tech world as a Full-Stack Developer. I will soon will have completed General Assembly's Software Egineering Intensive 3 month course, and updating my portfolio as I go along. Please take a look at the projects I've built / been apart of, if interested. </p>
 								</div>
 							</section>
 
@@ -66,7 +67,7 @@
 									<h3>Technologies I know</h3>
 									<p>I feel confident working in the following technologies</p>
 									<ul class="feature-icons">
-										<li class="fab fa-html5" >HTML5</li>
+										<li class="fab fa-html5" > <i class="fas fa-camera"></i>HTML5</li>
 										<li class="fab fa-bootstrap">Bootstrap</li>
 										<li class="fab fa-js-square">Javascript</li>
 										<li class="fab fa-css3-alt">CSS3</li>
