--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 									<h3>Technologies I know</h3>
 									<p>I feel confident working in the following technologies</p>
 									<ul class="feature-icons">
-										<li class="fab fa-html5" > <i class="fas fa-camera"></i>HTML5</li>
+										<li class="icon solid fa-code" >  <i class="fas fa-camera"></i>HTML5</li>
 										<li class="fab fa-bootstrap">Bootstrap</li>
 										<li class="fab fa-js-square">Javascript</li>
 										<li class="fab fa-css3-alt">CSS3</li>
