first project added

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<section id="header">
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
-					<h1 id="logo"><a href="https://media.licdn.com/dms/image/C4E03AQGw2LedVgDFmA/profile-displayphoto-shrink_200_200/0?e=1576108800&v=beta&t=K4Fr4FA51rdqxDxyaDAemfSrus8AMJUSk3fDeCSWt9Q">Daniel Gleason</a></h1>
+					<h1 id="logo"><a href="https://media.licdn.com/dms/image/C4E03AQGw2LedVgDFmA/profile-displayphoto-shrink_800_800/0?e=1576108800&v=beta&t=RsrU96FNDxYeF-2y-Euhl0J2ayIY1wPpfuOYs2LFC0g">Daniel Gleason</a></h1>
 					<p>Aspiring Full-Stack Developer</p>
 				</header>
 				<nav id="nav">
@@ -57,7 +57,7 @@
 										<p>My name is Danny Gleason<br />
 										feel free to check out my resume at <a href="https://docs.google.com/document/d/10OUAYXiYmBUSLBduZBJ8F-LuV3yJ8PYZ/edit">Resume</a>.</p>
 									</header>
-									<p>I've worked as a teacher, an entrepreneurer, and a tech salesperson. I'd like to bring my people skills and my passion for the tech industry to the tech world as a Full-Stack Developer. I will soon will have completed General Assembly's Software Egineering Intensive 3 month course, and updating my portfolio as I go along. Please take a look at the projects I've built / been apart of, if interested. </p>
+									<p>I've worked as a teacher, an entrepreneurer, and a tech salesperson. I'd like to bring my people skills and my passion for the tech industry to the tech world as a Full-Stack Developer. I will soon will have completed General Assembly's Software Egineering Intensive 3 month course, and will be updating my portfolio as I go along. Please take a look at the projects I've built / been apart of, if interested. </p>
 								</div>
 							</section>
 
@@ -79,12 +79,12 @@
 							<section id="three">
 								<div class="container">
 									<h3>A Few Accomplishments</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<p>Check out these projects I've built!</p>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="https://podcastaway.herokuapp.com/" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Possibly broke spacetime</h4>
+												<h4>Podcastaway</h4>
 												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
 											</div>
 										</article>
