--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 									<p>Check out these projects I've built!</p>
 									<div class="features">
 										<article>
-											<a href="https://podcastaway.herokuapp.com/" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="//imgur.com/a/uuU89Jm" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Podcastaway</h4>
 												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
