--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
-					<h1 id="logo"><a href="https://media.licdn.com/dms/image/C4E03AQGw2LedVgDFmA/profile-displayphoto-shrink_800_800/0?e=1576108800&v=beta&t=RsrU96FNDxYeF-2y-Euhl0J2ayIY1wPpfuOYs2LFC0g">Daniel Gleason</a></h1>
+					<span class="image avatar"><img src="https://i.imgur.com/ZqIWQJQ.jpg" alt="" /></span>
+					<h1 id="logo"><a href="https://i.imgur.com/ZqIWQJQ.jpg">Daniel Gleason</a></h1>
 					<p>Aspiring Full-Stack Developer</p>
 				</header>
 				<nav id="nav">
@@ -31,11 +31,11 @@
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://twitter.com/danny_collins" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://www.facebook.com/dcgleason" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+						<li><a href="https://www.instagram.com/dcgleason/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://github.com/dcgleason" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="mailto:danny.c.gleason@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</footer>
 			</section>
@@ -55,7 +55,7 @@
 									<header class="major">
 										<h2>Portfolio</h2>
 										<p>My name is Danny Gleason<br />
-										feel free to check out my resume at <a href="https://docs.google.com/document/d/10OUAYXiYmBUSLBduZBJ8F-LuV3yJ8PYZ/edit">Resume</a>.</p>
+										feel free to check out my <a href="https://docs.google.com/document/d/1txHD2YFbt6vIHQjz_yRhTfHly4lWOokvqzkH6lfnk5c/edit?usp=sharing">Resume</a>.</p>
 									</header>
 									<p>I've worked as a teacher, an entrepreneurer, and a tech salesperson. I'd like to bring my people skills and my passion for the tech industry to the tech world as a Full-Stack Developer. I will soon will have completed General Assembly's Software Egineering Intensive 3 month course, and will be updating my portfolio as I go along. Please take a look at the projects I've built / been apart of, if interested. </p>
 								</div>
@@ -65,7 +65,7 @@
 							<section id="two">
 								<div class="container">
 									<h3>Technologies I know</h3>
-									<p>I feel confident working in the following technologies</p>
+									<p> </p>
 									<ul class="feature-icons">
 										<li class="icon solid fa-code" >HTML5</li>
 										<li class="icon solid fa-code">Bootstrap</li>
@@ -82,10 +82,10 @@
 									<p>Check out these projects I've built!</p>
 									<div class="features">
 										<article>
-											<a href="//imgur.com/a/uuU89Jm" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="https://podcastaway.herokuapp.com/" class="image"><img src="https://i.imgur.com/kO8gq5r.png" alt="" /></a>
 											<div class="inner">
 												<h4>Podcastaway</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<p>Application that supports user and admit accounts. Interface build in Rails with live updates using React and Foundation for styling. Users recieve email updates when there are comments posted on their entries. User authentification managed with Devise (group project) </p>
 											</div>
 										</article>
 										<article>
