opening line edits

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
 								<div class="container">
 									<header class="major">
 										<h2>Portfolio</h2>
-										<p>My name is Danny Gleason<br />
-										feel free to check out my <a href="https://docs.google.com/document/d/1txHD2YFbt6vIHQjz_yRhTfHly4lWOokvqzkH6lfnk5c/edit?usp=sharing">Resume</a>.</p>
+										<p>Hi! My name is Danny,<br />
+										check out my <a href="https://docs.google.com/document/d/1txHD2YFbt6vIHQjz_yRhTfHly4lWOokvqzkH6lfnk5c/edit?usp=sharing">Resume</a>.</p>
 									</header>
-									<p>I've worked as a teacher, an entrepreneurer, and a tech salesperson. I'd like to bring my people skills and my passion for the tech industry to the tech world as a Full-Stack Developer. I will soon will have completed General Assembly's Software Egineering Intensive 3 month course, and will be updating my portfolio as I go along. Please take a look at the projects I've built / been apart of, if interested. </p>
+									<p>I've worked as a teacher, an entrepreneurer, and a tech sales professional. I'd like to bring my people skills and my passion for the tech industry to the tech world as a Full-Stack Developer. I will soon will have completed General Assembly's Software Egineering Intensive 3 month course, and will be updating my portfolio as I go along. Please take a look at the projects I've built / been apart of, if interested. </p>
 								</div>
 							</section>
 
