--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 											<a href="https://podcastaway.herokuapp.com/" class="image"><img src="https://i.imgur.com/kO8gq5r.png" alt="" /></a>
 											<div class="inner">
 												<h4>Podcastaway</h4>
-												<p>Application that supports user and admit accounts. Interface built in Rails with live updates using React and Foundation for styling. Users recieve email updates when there are comments posted on their entries. User authentification managed with Devise (group project) </p>
+												<p>Application that allows users to add and comment on favorite podcasts. Supports user and admin accounts. Interface built in Rails with live updates using React and Foundation for styling. Users recieve email updates when there are comments posted on their entries. User authentification managed with Devise (group project) </p>
 											</div>
 										</article>
 										<article>
